[project]
name = "smna-assessment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.65",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]
