[project]
name = "smna-assessment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.65",
    "community>=1.0.0b1",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "nrclex>=4.1.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyldavis>=3.4.1",
    "python-louvain>=0.16",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]
